# napari-conference

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_conference/: __init__.py  _widget.py  filters.py  media_conference_widget.py  napari.yaml
src/napari_conference/_tests/: test_widget.py
