[project]
name = "napari-conference"
version = "0.1.0"
description = "A simple plugin that allows you to use napari + your webcam in video calls"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Kyle Harrington", email = "czi@kyleharrington.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "opencv-python",
    "pyvirtualcam",
    "napari[all]>=0.4.19.post1",
    "pyside6>=6.6.3.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/kephale/napari-conference/issues"
"Documentation" = "https://github.com/kephale/napari-conference#README.md"
"Source Code" = "https://github.com/kephale/napari-conference"
"User Support" = "https://github.com/kephale/napari-conference/issues"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/napari_conference"]

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points."napari.manifest"]
"napari-conference" = "napari_conference:napari.yaml"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
